✨ start/resume button makeover
semver: minor
